# paper-figures

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/skills/icarus-figures/: SKILL.md
.claude/skills/icarus-figures/evals/: README.md
.claude/skills/icarus-figures/references/: caption-and-quality.md
.claude/skills/paper-figure-generation/: SKILL.md
.claude/skills/paper-figure-generation/evals/: trigger-eval.json
.claude/skills/paper-figure-generation/references/: figure-cookbook.md  figure-critique.md  framework-figures.md
.github/workflows/: ci.yml
examples/: advanced_gallery.py  archetypes_gallery.py  before_after.py  complex_panels.py  coverage_gallery.py  domain_showcases.py  gallery.py  modern_gallery.py  paradigms_gallery.py  rich_gallery.py  scientific_gallery.py  showcase_gallery.py
examples/hero_tikz/: framework_hero.tex  graphical_model_hero.tex  matrix_layout_hero.tex  pipeline_hero.tex  tensor_framework_hero.tex
outputs/figures/: figure_manifest.csv
paperfig/: __init__.py  archetypes.py  paperfig.mplstyle  scientific.py  style.py
scripts/: _smoke_test.py  _style.py  critique.py
tests/: test_archetypes.py  test_critique.py  test_scientific.py
